# geometry-processing-deformation

./: .gitignore  .gitmodules  CMakeLists.txt  README.html  README.md  README.tex.md  arap_single_iteration.cpp  biharmonic_precompute.cpp  biharmonic_solve.cpp  main.cpp
build-desktop/: CMakeCache.txt  Makefile  cmake_install.cmake
build-desktop/libigl/: Makefile  cmake_install.cmake
build-desktop/libigl/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
build-desktop/libigl/glfw/src/: Makefile  cmake_install.cmake  glfw3.pc  glfw_config.h
cmake/: libigl.cmake
data/: knight.off
include/: arap_precompute.h  arap_single_iteration.h  biharmonic_precompute.h  biharmonic_solve.h  closest_rotation.h
markdown/: header.md
source/: arap_precompute.cpp  arap_single_iteration.cpp  biharmonic_precompute.cpp  biharmonic_solve.cpp
src/: arap_precompute.cpp  arap_single_iteration.cpp  arap_single_iteration.cpp~RF58baf7.TMP  biharmonic_precompute.cpp  biharmonic_solve.cpp  closest_rotation.cpp
